--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- "name": "mmm-dropboxgallery",
+ "name": "mmm-dropboxwallpaper",
  "version": "1.0.0",
  "description": "MagicMirror module for showing images from Dropbox.",
  "author": "eouia",
