--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
  "dependencies": {
   "dropbox": "^4.0.9",
   "exif": "^0.6.0",
-  "isomorphic-fetch": "^2.2.1",
+  "isomorphic-fetch": "^2.2.1"
  }
 }
