--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
- "name": "mmm-dropboxwallpaper",
- "version": "2.1.0",
- "description": "MagicMirror module for showing images from Dropbox.",
- "author": "eouia",
- "license": "MIT",
- "repository": "https://github.com/eouia/MMM-DropboxWallpaper",
- "dependencies": {
-  "axios": "^0.19.2",
-  "dropbox": "^4.0.9",
-  "exif": "^0.6.0",
-  "isomorphic-fetch": "^2.2.1"
- }
+  "name": "mmm-dropboxwallpaper",
+  "version": "3.0.0",
+  "description": "MagicMirror module for showing images from Dropbox.",
+  "author": "eouia",
+  "license": "MIT",
+  "repository": "https://github.com/mong-ni/MMM-DropboxWallpaper",
+  "scripts": {
+  "postinstall": "cp env.example .env",
+  "postupgrade": "cp env.example .env"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "dropbox": "^10.34.0",
+    "exifr": "^7.1.3",
+    "node-fetch": "^2.7.0"
+  },
+  "devDependencies": {
+    "express": "^4.18.2",
+    "open": "^9.1.0"
+  }
 }
